--- a/css/style.css
+++ b/css/style.css
@@ -3,80 +3,143 @@
     --max-width: 1280px;
     --min-width: 320px;
 }
+
 * {
     box-sizing: border-box;
 }
-body{
+
+body {
     font-family: 'Rubik', sans-serif;
 }
+
 /* Header */
-.imagen-logo{
-    width: 225px;
-    height: 87px;
+.imagen-logo {
+    width: 215px;
+    height: 80px;
 }
-.nav-link{
-    font-weight: bold;  
+
+.navbar-collapse {
+    justify-content: flex-end;
+}
+
+.nav-link {
+    color: #000000;
+    font-weight: bold;
 }
 
 /* Contenido principal */
-.titulo-propiedad{
-    font-size: 32px;
-    font-weight: bold;
-    font-style: italic;
+.img_carousel {
+    height: 600px;
 }
-.error{
+
+.titulo_propiedad{
+    font-weight: bold;
+    margin: 20px 15px 20px 15px;
+    color: #2a2a2a;
+}
+
+.busq_prop {
+    margin-top: 40px;
+}
+
+.error {
     color: red;
     font-size: 12px;
     margin-top: 5px;
+    text-align: center;
 }
-.boton{
-    background-color: rgb(254, 148, 42);
+
+.button {
+    background-color: rgb(255, 146, 12);
+    color: #000000;
+    padding: 10px 35px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 10px;
+    margin-bottom: 10px;
 }
-.boton:hover{
+
+.button:hover {
     background-color: rgb(251, 130, 10);
 }
+
+.form {
+    margin: 20px 10px 20px 10px;
+}
+
+.btn {
+    background: #F8F9FA;
+    color: #000000;
+    font-size: 15px;
+    padding: 7px 50px 7px 50px;
+    border-radius: 10px;
+
+}
+
+.btn:hover {
+    background: #cacaca;
+}
+
+.search {
+    width: 12px;
+    height: 12px;
+    font-weight: bold;
+    margin-right: 3px;
+}
+
 /* Footer */
-.footer-wrapper{
+.footer-wrapper {
     background-color: rgb(254, 148, 42);
 }
-.footer-seccion{
+
+.footer-seccion {
     width: 100%;
     max-width: var(--max-width);
     margin: auto;
 }
-.footer-seccion img{
-width: 160px;
-height: 80px;
+
+.footer-seccion img {
+    width: 160px;
+    height: 80px;
 }
-.footer-seccion p{
+
+.footer-seccion p {
     font-size: 12px;
     margin-left: 20px;
 }
-.footer-seccion_titulo{
+
+.footer-seccion_titulo {
     margin-left: 20px;
     font-weight: bolder;
     font-size: 18px;
 }
-.footer-seccion_dr{
+
+.footer-seccion_dr {
     text-align: center;
 }
-.footer-seccion_dr small{
+
+.footer-seccion_dr small {
     font-size: 10px;
 }
 
 /* Media Queries */
-@media (min-width: 768px){
-.footer-wrapper {
-  display: flex;
-  justify-content: center;
-}
-.footer-seccion img{
-    margin: 20px;
-}
-@media (min-width: 992px){
-    .footer{
-        display: grid;
-        grid-template-columns: repeat(3,1fr);
+@media (min-width: 768px) {
+    .footer-wrapper {
+        display: flex;
+        justify-content: center;
     }
-}
+
+    .footer-seccion img {
+        margin: 20px;
+    }
+
+    @media (min-width: 992px) {
+        .footer {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+        }
+    }
 }
